--- a/EntityFrameworkM2L/EntityFrameworkM2L.csproj
+++ b/EntityFrameworkM2L/EntityFrameworkM2L.csproj
@@ -32,8 +32,28 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
+    </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.12.2.1100\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Oracle.ManagedDataAccess.EntityFramework, Version=6.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.EntityFramework.12.2.1100\lib\net45\Oracle.ManagedDataAccess.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,14 +65,94 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ATELIER.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="bdd.cs" />
+    <Compile Include="BENEVOLE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CATEGORIECHAMBRE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CONTENUHEBERGEMENT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DATEBENEVOLAT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DATENUITE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EFOracle.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EFOracle.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EFOracle.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EFOracle.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EFOracle.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPrincipale.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmPrincipale.Designer.cs">
+      <DependentUpon>FrmPrincipale.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HOTEL.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="INSCRIRE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="INTERVENANT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LICENCIE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PAIEMENT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PARAMETRE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PARTICIPANT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PARTICIPER.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PROPOSER.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QUALITE.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RESTAURATION.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="STATUT.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="THEME.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Utilitaire.cs" />
+    <Compile Include="VACATION.cs">
+      <DependentUpon>EFOracle.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FrmPrincipale.resx">
+      <DependentUpon>FrmPrincipale.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,7 +161,16 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EntityDeploy Include="EFOracle.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EFOracle.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="EFOracle.edmx.diagram">
+      <DependentUpon>EFOracle.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -74,6 +183,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\affiche.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="EFOracle.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EFOracle.Context.cs</LastGenOutput>
+      <DependentUpon>EFOracle.edmx</DependentUpon>
+    </Content>
+    <Content Include="EFOracle.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EFOracle.edmx</DependentUpon>
+      <LastGenOutput>EFOracle.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
