-Ajout partie inscription licencié (finalisée) -Test sur la validité des montant des chéques

--- a/EntityFrameworkM2L/App.config
+++ b/EntityFrameworkM2L/App.config
@@ -44,5 +44,6 @@
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
     <add name="M2LEntities" connectionString="metadata=res://*/EFOracle.csdl|res://*/EFOracle.ssdl|res://*/EFOracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=freesio.lyc-bonaparte.fr:15213/xe;PASSWORD=mdlef;PERSIST SECURITY INFO=True;USER ID=MDLEF&quot;" providerName="System.Data.EntityClient" />
+    <add name="M2LEntitie" connectionString="metadata=res://*/EFOracle.csdl|res://*/EFOracle.ssdl|res://*/EFOracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=freesio.lyc-bonaparte.fr:15213/xe;PASSWORD=mdlef;PERSIST SECURITY INFO=True;USER ID=MDLEF&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
